# taskmaster

./: docker-compose.yml
api/: .flake8  pyproject.toml
api/scripts/: launch-api.local.sh
api/taskmaster/: app.py  settings.py
api/taskmaster/core/: entities.py  storage.py  valueobjects.py
api/taskmaster/core/sqlalchemy/: __init__.py  adapter.py  alembic.ini  base.py  models.py
api/taskmaster/core/sqlalchemy/alembic/: env.py
api/taskmaster/core/sqlalchemy/alembic/versions/: 262e4fb05bd7_create_tasks_table.py
api/taskmaster/domain/tasks/: entities.py
api/taskmaster/storage/adapters/tasks/: memory.py  redis.py
api/taskmaster/storage/adapters/tasks/psql/: __init__.py  adapter.py  model.py
api/taskmaster/storage/managers/: tasks.py
api/taskmaster/tests/: conftest.py  test_app.py
api/taskmaster/tests/core/: test_entities.py  test_valueobjects.py
api/taskmaster/tests/domain/task/: conftest.py  test_task_entities.py
api/taskmaster/tests/domain/tasks/: conftest.py  test_tasks_entities.py  test_tasks_storage.py
docker/: api.dockerfile
