[tool.poetry]
name = "taskmaster"
version = "0.1.0"
description = ""
authors = ["Andres Javier Lopez <ajavier.lopez@gmail.com>"]
readme = "README.md"
packages = [{include = "taskmaster"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.2"
uvicorn = "^0.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
