[tool.poetry]
name = "taskmaster"
version = "0.1.0"
description = ""
authors = ["Andres Javier Lopez <ajavier.lopez@gmail.com>"]
readme = "README.md"
packages = [{include = "taskmaster"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.2"
uvicorn = "^0.22.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
pytest-cov = "^4.1.0"
httpx = "^0.24.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
# make it compatible with black
profile = "black" 

[tool.pytest.ini_options]
addopts = "--cov=taskmaster"
testpaths = "taskmaster"

[tool.coverage.run]
omit = [ "taskmaster/tests/*" ]
